测试问题修改

--- a/project.config.json
+++ b/project.config.json
@@ -36,7 +36,8 @@
     "showES6CompileOption": false,
     "useCompilerPlugins": false,
     "useStaticServer": true,
-    "ignoreUploadUnusedFiles": true
+    "ignoreUploadUnusedFiles": true,
+    "condition": false
   },
   "compileType": "miniprogram",
   "simulatorType": "wechat",
